# docs/swagger.json
@@ -3262,7 +3262,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/yaofang_internal_model.Patient"
+                            "$ref": "#/definitions/internal_handler.patientWriteRequest"
                         }
                     }
                 ],
@@ -3332,7 +3332,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/yaofang_internal_model.Patient"
+                            "$ref": "#/definitions/internal_handler.patientWriteRequest"
                         }
                     }
                 ],
@@ -6002,6 +6002,29 @@
                 }
             }
         },
+        "internal_handler.patientWriteRequest": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "string"
+                },
+                "card_no": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "is_lactating": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                }
+            }
+        },
         "internal_handler.receiveRequest": {
             "type": "object",
             "required": [
@@ -6739,38 +6762,6 @@
                 },
                 "prescription_id": {
                     "type": "integer"
-                }
-            }
-        },
-        "yaofang_internal_model.Patient": {
-            "type": "object",
-            "properties": {
-                "age": {
-                    "type": "string"
-                },
-                "card_no": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "gender": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "is_lactating": {
-                    "type": "boolean"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "phone": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
                 }
             }
         },
